--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,21 @@
 # Dependencies
-markdown:         redcarpet
+markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            "Mirche Toshevski Blog"
+tagline:          "Mirche Toshevski's Blog"
+#description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      '.NET developer, interested in <a href="https://www.asp.net/">ASP.NET</a>, <a href="https://www.xamarin.com/">Xamarin</a>, <a href="#">MSSQL</a>, fan of <a href="#">Doctor Who</a>'
+url:              http://neemesis.github.io
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Mirche Toshevski'
+  url:            https://twitter.com/
 
 paginate:         5
 
@@ -22,7 +23,7 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/neemesis/neemesis.github.io
 
 # Plugins
 plugins:          [jekyll-paginate]
