remove liquid seo

--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,4 @@ github:
   repo:           https://github.com/neemesis/neemesis.github.io
 
 # Plugins
-plugins:          [jekyll-paginate, jekyll-sitemap, jekyll-seo-tag]
+plugins:          [jekyll-paginate, jekyll-sitemap]
