--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,33 @@
-# Dependencies
-markdown:         kramdown
-highlighter:      rouge
+# Site settings
+email: "mirche.toshevski@gmail.com"
+baseurl: ""
+paginate: 8
+paginate_path: "/blog/page-:num"
+google_analytics: 
 
-# Permalinks
-permalink:        /blog/:year/:month/:day/:title/
+# SEO settings
+title: Mirche<br />Toshevski's<br />Blog
+description: '.NET developer, interested in ASP.NET, Xamarin, MSSQL, fan of Doctor Who'
+url: "neemesis.github.io"
+twitter_username: 
+default_img: 
 
-# Setup
-title:            "Mirche Toshevski"
-tagline:          "Mirche Toshevski's Blog"
-#description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-description:      '.NET developer, interested in <a href="https://www.asp.net/">ASP.NET</a>, <a href="https://www.xamarin.com/">Xamarin</a>, <a href="#">MSSQL</a>, fan of <a href="http://www.bbc.co.uk/programmes/b006q2x0">Doctor Who</a>'
-url:              https://neemesis.github.io
-baseurl:          /
-hometitle:        "Posts"
+# Profile settings
+name: "Mirche Toshevski"
+profile_img: "../../../../../assets/covers/homer-simpson.jpeg"
+profile: '.NET developer, interested in ASP.NET, Xamarin, MSSQL, fan of Doctor Who'
+social: 
+  github: "https://github.com/neemesis/"
 
-author:
-  name:           'Mirche Toshevski'
-  url:            https://www.linkedin.com/in/mirche-toshevski-9918b6108/
+# Build settings
+exclude: ["_screenshots", "Gemfile", "Gemfile.lock", "LICENSE.txt", "README.md"]
+markdown: kramdown
+highlighter: rouge
+permalink: /blog/:year/:month/:day/:title/
 
-paginate:         5
-
-# Custom vars
-version:          1.0.0.0
-
-logo:             /assets/home1.jpg
-
-github:
-  repo:           https://github.com/neemesis/neemesis.github.io
+# Sass
+sass:
+  style: compressed
 
 # Plugins
-plugins:          [jekyll-paginate, jekyll-sitemap]
+plugins: [jekyll-paginate, jekyll-sitemap, octopress-autoprefixer]
