--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_analytics:
 # SEO settings
 title: Mirche<br />Toshevski's<br />Blog
 description: '.NET developer, interested in ASP.NET, Xamarin, MSSQL, fan of Doctor Who'
-url: "neemesis.github.io"
+url: "mirchetoshevski.com"
 twitter_username: 
 default_img: 
 
