change .com with .net

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ paginate_path: "/blog/page-:num"
 google_analytics: 
 
 # SEO settings
-title: Mirche<br />Toshevski's<br />Blog
+title: Mirche Toshevski's Blog
 description: '.NET developer, interested in ASP.NET, Xamarin, MSSQL, fan of Doctor Who'
-url: "mirchetoshevski.com"
+url: "mirchetoshevski.net"
 twitter_username: 
 default_img: 
 
